--- a/PMTool/src/main/resources/application.properties
+++ b/PMTool/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.url = jdbc:mysql://localhost:3307/springproject
 spring.datasource.username=root
 spring.datasource.password=password
 
+#spring.datasource.url = jdbc:mysql://localhost:3306/springproject
+#spring.datasource.username=root
+#spring.datasource.password=
 #Using the right database platform is extremly important on Spring Boot 2.0
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
